force-app/main/default/objects/Competitor_List__c/Competitor_List__c.object-meta.xml
<CustomObject>
    <label>Competitor List</label>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Competitors Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Competitor Lists</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>