force-app/main/default/objects/Competitor_List__c/fields/Competitor__c.field-meta.xml
<CustomField>
    <fullName>Competitor__c</fullName>
    <label>Competitor</label>
    <referenceTo>Competitor__c</referenceTo>
    <relationshipName>Competitor_Lists</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>